# tako

./: .all-contributorsrc  .ghci  .gitignore  .gitmodules  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  Htriple.cabal  LICENSE  LICENSE.md  README.md  Tako.cabal  ast.cc  ast.h  bacon.toml  blocking_wasm_deps  build.rs  check.tako  foo.txt  gen.sh  main.cc  makefile  meson.build  passes.md  stack.yaml  tako.cabal  test.cc  test.tako  timing.sh  tmp.arcs  todo.md
app/: Lambda.hs  (+2 more)
entity-component-slab/: Cargo.toml  README.md
entity-component-slab/src/: lib.rs
llamada/: Cargo.toml
llamada-calculus/: Cargo.toml
llamada-calculus/src/: base_types.rs  compact_numerals.rs  dense.rs  expr_result.rs  lib.rs  macros.rs  ref_counted.rs  sparse.rs  tests.rs  type_checking.rs  types.rs  union_find.rs  visitor.rs  with_context.rs
llamada-calculus/src/reprs/: compact_numerals.rs  dense.rs  mod.rs  ref_counted.rs  sparse.rs
llamada-calculus/src/visitors/: compact_to_church.rs  count_depth.rs  count_nodes.rs  mod.rs  transform_meta.rs
llamada/src/: base_types.rs  expr_result.rs  lib.rs  macros.rs  tests.rs  type_checking.rs  union_find.rs
llamada/src/reprs/: compact_numerals.rs  dense.rs  llamada.rs  ref_counted.rs  sparse.rs
llamada/src/visitors/: compact_to_church.rs  transform_meta.rs
short-typed-index/: Cargo.toml  README.md
short-typed-index/src/: lib.rs
src/: CMakeLists.txt  arg_parser.cc  arg_parser.h  ast.cc  ast.h  ast.rs  ast_internal.h  ast_node.rs  build.rs  checker.cc  checker.h  cli_options.rs  compi32.rs  compile.cc  compile.h  compiler_context.rs  compiler_tasks.rs  components.rs  concepts.rs  context.cc  context.h  cpp_ast.rs  database.rs  definition_finder.rs  enums.h  error.rs  errors.rs  eval.cc  eval.h  evali32.rs  externs.rs  internal_error.rs  interpreter.rs  jobs.rs  keywords.rs  lex.cc  lex.h  lib.rs  literal_values.rs  location.rs  (+42 more)
src/arg_parser/: CMakeLists.txt  arg_parser.cc  arg_parser.h
src/checker/: CMakeLists.txt  checker.cc  checker.h
src/compiler_tasks/: mod.rs
src/data_structures/: map_macros.rs  mod.rs  tree.rs  tribool.rs
src/experimental/: lambda.rs  lambda_to_ski.rs  mod.rs  ski.rs  type_graph.rs  type_graph_builder.rs
src/free_standing/: cpp_ast.rs  meta.rs  mod.rs  pretty_assertions.rs  tribool.rs  typed_index.rs
src/free_standing/jobs/: job.rs  job_store.rs  mod.rs
src/jobs/: job.rs  mod.rs
src/parser/: CMakeLists.txt  ast.cc  ast.h  ast_internal.h  lex.cc  lex.h  parser.cc  parser.h  toString.cc  toString.h
src/passes/: ast_interpreter.rs  definition_finder.rs  interpreter.rs  mod.rs  parser.rs  pretty_print.rs  stack_interpreter.rs  symbol_table_builder.rs  to_cpp.rs  type_checker.rs
src/tasks/: manager.rs  mod.rs  status.rs  task_trait.rs
src/tests/: CMakeLists.txt  checker_tests.cc  checker_tests.h
src/ui/: cli.rs  client.rs  http.rs  mod.rs  tui.rs
src/util/: CMakeLists.txt  context.cc  context.h  util.h
src/utils/: cpp_ast.rs  meta.rs  pretty_assertions.rs  todo.rs  typed_index.rs
tako/: Cargo.toml
tako-webui/: :w  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  index.scss  package-lock.json  package.json  raw.html  rollup.config.mjs  tsconfig.json
tako-webui/src/: app-root.ts  app.rs  client.rs  index.ts  main.rs  prism.css  tako-interface.ts  tako-module.ts  tako-webui.ts
tako-webui/src/app/: footer.rs  mod.rs  module.rs  nav.rs
tako-webui/static/: index.html  prism.css  prism.js  raw.html
tako-webui/stories/: tako-webui.stories.ts
tako-webui/test/: tako-webui.test.ts
tako/src/: cli_options.rs  main.rs
tako/src/ui/: http.rs  mod.rs  tui.rs
takoc/: Cargo.toml
takoc/src/: cli_options.rs  main.rs
takoc/src/ui/: http.rs  mod.rs  tui.rs
takolib/: Cargo.toml  build.rs  tako.l  tako.y
takolib/src/: ast.rs  cli_options.rs  compiler.rs  compiler_context.rs  error.rs  interpreter.rs  keywords.rs  lib.rs  lowerer.rs  parser.rs  pretty_printer.rs  primitives.rs  qbice_repro.rs  qbice_repro_async.rs  qbice_repro_dual_engine.rs  qbice_repro_volatile.rs  string_interner.rs  tako.l  tako.y  test.rs  tokens.rs
takolib/src/ast/: contains.rs  location.rs  mod.rs  nodes.rs  pretty_printer.rs  string_interner.rs
takolib/src/backend/: llvm.rs  mod.rs
takolib/src/better_std/: map_macros.rs  mod.rs  pretty_assertions.rs
takolib/src/codegen/: mod.rs
takolib/src/desugarer/: mod.rs
takolib/src/lowerer/: mod.rs
takolib/src/parser/: error.rs  keywords.txt  lex.rs  lexer.rs  mod.rs  old_mod.rs  semantics.rs  tests.rs  tokens.rs
takolib/src/primitives/: meta.rs  mod.rs  typed_index.rs
takolib/src/queries/: executors.rs  mod.rs
takolib/src/tasks/: manager.rs  mod.rs  status.rs  task_trait.rs
takolib/src/ui/: client.rs  http.rs  mod.rs
takolib/src/utils/: cpp_ast.rs  map_macros.rs  mod.rs  pretty_assertions.rs  runtime.rs
takolib/tests/bins/: make_test_case.rs
takoweb/: Cargo.toml  index.html
takoweb/src/: client.rs
takoweb/src/app/: footer.rs  mod.rs
test/: Core.hs  Main.hs  OperationTests.hs  ParserTests.hs  PrimTypeTests.hs  ResolutionTests.hs  TastyUtil.hs  TestUtil.hs  Tests.hs  TripleTests.hs  checker_tests.cc  checker_tests.h  doctest.h  eval_tests.cc  meson.build  parser_tests.cc  test.cc
tree-sitter-tako/: .gitignore  Cargo.toml  Makefile  Package.swift  bacon.toml  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  playground.sh  pyproject.toml  setup.py  test.tk  tree-sitter-tako.wasm  tree-sitter.json  watch.sh  watch_highlight.sh
tree-sitter-tako/bindings/c/: tree-sitter-tako.pc.in
tree-sitter-tako/bindings/go/: binding.go  binding_test.go
tree-sitter-tako/bindings/node/: binding.cc
tree-sitter-tako/bindings/rust/: build.rs  lib.rs
tree-sitter-tako/queries/: highlights.scm
tree-sitter-tako/src/: grammar.json  node-types.json  parser.c
tree-sitter-tako/test/corpus/: comments.tk  contexts.tk  definitions.tk  enums.tk  fib.tk  fib_acc.tk  format_string.tk  generic_abstract_data_types.tk  hello.tk  instances.tk  number.tk  simple_exprs.tk  simple_sum.tk  string_literals.tk  vector_transpose.tk  (+1 more)
(+456 files in other folders)
