[workspace]
resolver = "2"
default-members=[
  "better-std",
  "llamada",
  "short-typed-index",
  "entity-component-slab",
  "tree-sitter-tako",
  "tako",
  "takolib"
]
members = [
    "better-std",
    "entity-component-slab",
    "llamada",
    "short-typed-index",
    "tako",
    "takobench",
    "takolib",
    "takoweb"
]

[workspace.package]
homepage = "https://takolang.dev"
repository = "https://github.com/cypher1/tako"

[profile.test]
opt-level = 3

[profile.release]
debug = true
