[workspace]
resolver = "2"
default-members=["tako", "takolib", "llamada"]
members = [
    "better-std",
    "takolib",
    "tako",
    "takoweb",
    "takobench",
    "llamada",
]

[workspace.package]
homepage = "https://takolang.dev"
repository = "https://github.com/cypher1/tako"

[profile.test]
opt-level = 3

[profile.release]
debug = true

[workspace.dependencies]
async-trait = "0.1"
tokio = "1.52.2"
log = "0.4"
