[workspace]
resolver = "2"
default-members=["tako", "takolib", "llamada"]
members = [
    "better-std",
    "takolib",
    "tako",
    "takoweb",
    "takobench",
    "llamada",
]

[workspace.package]
homepage = "https://takolang.dev"
repository = "https://github.com/cypher1/tako"

[profile.test]
opt-level = 3

[profile.release]
debug = true

[workspace.dependencies]
async-trait = "0.1"
futures = "0.3"
tokio = "1.52.3"
log = "0.4"
pretty_assertions = "1.4.1"
takolib = { path = "takolib" }
better-std = { path = "better-std", features = [ ] }
llamada = { path = "llamada", features = [ ] }
