name:                Htriple
version:             0.1.0.0
synopsis:            A Haskell implementation of Triple based Hoare Logic
description:         A Hoare Logic processor designed to form a proof system for pure, proof based languages
homepage:            https://github.com/Cypher1/Htriple#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Pratt
maintainer:          jp10010101010000@gmail.com
copyright:           BSD3
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Htriple
  hs-source-dirs:      lib, app
  main-is:             Main.hs
  other-modules:
      Triple
      Pred
      Resolution
      Util
      Operation
  default-language:    Haskell2010
  build-depends:
      base >= 4.9 && < 5,
      containers,
      haskeline >= 0.7 && < 0.8
  default-extensions: StandaloneDeriving FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wall

Test-Suite Htriple-OperationTests
  type:       detailed-0.9
  hs-source-dirs:      lib, test
  test-module:         OperationTests
  build-depends:
      base >= 4.9 && < 5,
      containers,
      Cabal >= 1.9.2,
      QuickCheck >= 2.12 && < 2.13
  other-modules:
      Triple
      Pred
      Resolution
      Util
      TestUtil
      Operation
  default-language:    Haskell2010
  default-extensions: FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wunused-imports

Test-Suite Htriple-ResolutionTests
  type:       detailed-0.9
  hs-source-dirs:      lib, test
  test-module:         ResolutionTests
  build-depends:
      base >= 4.9 && < 5,
      containers,
      Cabal >= 1.9.2,
      QuickCheck >= 2.12 && < 2.13
  other-modules:
      Triple
      Pred
      Resolution
      Util
      TestUtil
      Operation
  default-language:    Haskell2010
  default-extensions: FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wunused-imports

Test-Suite Htriple-TripleTests
  type:       detailed-0.9
  hs-source-dirs:      lib, test
  test-module:         TripleTests
  build-depends:
      base >= 4.9 && < 5,
      containers,
      Cabal >= 1.9.2,
      QuickCheck >= 2.12 && < 2.13
  other-modules:
      Triple
      Pred
      Resolution
      Util
      TestUtil
      Operation
  default-language:    Haskell2010
  default-extensions: FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wunused-imports
