name:                Htriple
version:             0.1.0.0
synopsis:            A Haskell implementation of Triple based Hoare Logic
description:         A Hoare Logic processor designed to form a proof system for pure, proof based languages
homepage:            https://github.com/Cypher1/Htriple#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Pratt
maintainer:          jp10010101010000@gmail.com
copyright:           BSD3
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library Htriple-lib
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:
      base >= 4.9 && < 5,
      containers,
      parsec >= 3.1 && < 3.2
  default-extensions: StandaloneDeriving FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wall -O2
  exposed-modules:
      Language
      Triple
      Pred
      PredParser
      Resolution
      Operation
  other-modules:
      Util

executable Htriple
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      Htriple-lib,
      haskeline >= 0.7 && < 0.8
  GHC-Options:    -Wall -O2
  other-modules:
      InternalInterpreter

test-suite Htriple-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:    Tests.hs
  default-language:    Haskell2010
  build-depends:
      Htriple-lib,
      base >= 4.9 && < 5,
      containers,
      parsec >= 3.1 && < 3.2,
      tasty >= 1.2.1 && < 1.2.2,
      tasty-hunit >= 0.10 && < 0.11
  default-extensions: StandaloneDeriving FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wall -O2
  other-modules:
      TastyUtil
      ParserTests
      OperationTests
      TripleTests

executable Lambda
  hs-source-dirs:      lib, app
  main-is:             Lambda.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.9 && < 5,
      containers,
      haskeline >= 0.7 && < 0.8,
      parsec >= 3.1 && < 3.2
  default-extensions: StandaloneDeriving FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wall -O2
  other-modules:
      LambdaCalculus

Test-Suite Htriple-ResolutionTests
  type:       detailed-0.9
  hs-source-dirs:      lib, test
  test-module:         ResolutionTests
  build-depends:
      base >= 4.9 && < 5,
      containers,
      Cabal >= 1.9.2,
      QuickCheck >= 2.12 && < 2.13,
      parsec >= 3.1 && < 3.2
  default-language:    Haskell2010
  default-extensions: FlexibleContexts FlexibleInstances GADTs LambdaCase MultiParamTypeClasses PartialTypeSignatures PatternSynonyms RankNTypes ScopedTypeVariables TypeApplications TypeInType TypeOperators ViewPatterns
  GHC-Options:    -Wunused-imports
  other-modules:
      Language
      Triple
      Pred
      Resolution
      Util
      TestUtil
      Operation
