name:                tako
version:             0.0.0.1
synopsis:            A Haskell implementation of triple based Hoare Logic
description:         A Hoare Logic processor designed to form a proof system for pure, proof based languages
homepage:            https://github.com/Cypher1/Tako#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Pratt
maintainer:          jp10010101010000@gmail.com
copyright:           BSD3
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library tako-lib
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:
      base >= 4.9 && < 5,
      containers,
      parsec >= 3.1 && < 3.2,
      transformers >= 0.5 && < 0.6
  GHC-Options:    -Wall -O2
  exposed-modules:
      Language
      Triple
      Pred
      Parser
      Resolution
      Operation
      PrimOpTypes
      Util

executable tako
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      tako-lib,
      base >= 4.9 && < 5,
      haskeline >= 0.7 && < 0.8,
      parseargs >= 0.2 && <0.3
  GHC-Options:    -Wall -O2
  other-modules:
      InternalInterpreter
      Paths_tako

test-suite tako-tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:    Tests.hs
  default-language:    Haskell2010
  build-depends:
      tako-lib,
      base >= 4.9 && < 5,
      containers,
      parsec >= 3.1 && < 3.2,
      tasty >= 1.2.2 && < 1.2.3,
      tasty-hunit >= 0.10 && < 0.11
  GHC-Options:    -Wall -O2
  other-modules:
      TestUtil
      ParserTests
      OperationTests
      TripleTests
      ResolutionTests
