[package]
name = "llamada"
version = "0.1.0"
repository = "https://github.com/cypher1/tako"
description = "An extensible lambda calculus implementation"
authors = ["Jay Pratt <jay@skfl.tech>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["compiler", "programming", "language"]
include = ["src/**/*", "LICENSE.md", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.0"
better-std = { path = "../better-std", features = [ ] }
log = "0.4"

[dev-dependencies]
env_logger = { version = "0.9" }
