[package]
name = "llamada"
version = "0.2.0"
repository = "https://github.com/cypher1/tako"
description = "An extensible lambda calculus implementation"
authors = ["Ellie Pratt <ellie@skfl.tech>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["compiler", "programming", "language"]
include = ["src/**/*", "LICENSE.md", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_assertions = "1.0"
better-std = { version = "0.2.0", path = "../better-std", features = [ ] }
