[package]
name = "tako-webui"
version = "0.1.0"
edition = "2021"
description = "A web based UI for tako"
readme = "README.md"
repository = "https://github.com/cypher1/tako"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version="0.20", features=["csr"] }
tako = { path = "../takolib", features = [ "wasm" ] }
tokio = { version = "1.24", features = ["sync", "macros"] }
yew-hooks = "0.2.0"
async-trait = "0.1"
