[package]
name = "tako"
version = "0.2.0"
repository = "https://github.com/cypher1/tako"
description = "The main CLI for tako"
authors = ["Ellie Pratt <ellie@skfl.tech>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["compiler", "programming", "language"]
categories = ["gui", "wasm", "web-programming"]
include = ["src/**/*", "LICENSE.md", "README.md"]

[features]
llvm_backend = [ "takolib/llvm_backend" ]

[dependencies]
async-trait = "0.1"
takolib = { version = "0.2.0", path = "../takolib", features = [ "native" ] }
tokio = { version = "1.44.2", features = [ "full" ] }
log = "0.4"
warp = "0.3"
crokey = "1.2.0"
crossterm = { version = "0.29.0", features = [ "event-stream" ] }
directories = "6.0.0"
notify = "8.0.0"
shutdown_hooks = "0.1"
futures = "0.3"
html-escape = "0.2.13"
