[package]
name = "takoc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tako = { path = "../takolib", features = [ "native" ] }
tokio = { version = "1.24", features = [ "full" ] }
log = "0.4"
warp = "0.3"
crokey = "0.5"
crossterm = { version = "0.24", features = [ "event-stream" ] }
directories = "4.0"
notify = "5.0"
shutdown_hooks = "0.1"
futures = "0.3"
