[package]
name = "takolib"
version = "0.2.0"
repository = "https://github.com/cypher1/tako"
description = "The core implementation of tako"
authors = ["Ellie Pratt <ellie@skfl.tech>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["compiler", "programming", "language"]
include = ["src/**/*", "LICENSE.md", "README.md"]

[features]
#default=["llvm_backend", "native"]
default=["native"]
wasm=["wasm-logger", "tree-sitter-tako/wasm"]
native=["env_logger"]
llvm_backend=["inkwell", "backend"]
mlir_backend=["melior", "backend"]
backend=[] # signals that 'a' backend is active.

[lib]
name = "takolib"
path = "src/lib.rs"

# [[bin]]
# name = "make_test_case"
# path = "tests/bins/make_test_case.rs"

# [[bench]]
# name = "tako_bench"
# harness = false

[dependencies]
thiserror = "2.0.12"
bitvec = "1"
# TODO(perf): Use bitsvec = "0.1.1" when portable_simd is on stable.
log = "0.4"
pretty_assertions = "1.4.1"
futures = "0.3"
tokio = { version = "1.44.2", features = ["sync", "macros", "rt"] }
async-trait = "0.1"
# Info: https://nnethercote.github.io/2021/12/08/a-brutally-effective-hash-function-in-rust.html
fxhash = "0.2"
static_assertions = "1.1"
num-traits = "0.2"
enum-kinds = "0.5"
env_logger = { version = "0.11.8", optional = true }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0"], optional = true }
wasm-logger = { version = "0.2.0", optional = true }
melior = { version = "0.24.0", optional = true }
smallvec = { version = "2.0.0-alpha.5" }
llamada = { version = "0.2.0", path = "../llamada", features = [ ] }
better-std = { version = "0.2.0", path = "../better-std", features = [ ] }
short-typed-index = { version = "0.2.0", path = "../short-typed-index", features = [ ] }
tree-sitter-tako = { version = "0.2.0", path = "../tree-sitter-tako", features = [ ] }
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter" , features = [ ] }
# tree-sitter = { package = "tree-sitter-facade-sg", version = "0.24.5" }
entity-component-slab = { version = "0.2.0", path = "../entity-component-slab", features = [ ] }
test_each_file = "0.3.4"
paste = "1.0.15"
chumsky = { version = "0.10.1", features = ["pratt"] }
strum = { version = "0.27.1", features = [ "derive" ] }

[dev-dependencies]
strum_macros = "0.27.1"
pretty_assertions = "1.4.1"
rand = "0.9.1"
walkdir = "2.5.0"
