[package]
name = "takolib"
version = "0.2.0"
repository = "https://github.com/cypher1/tako"
description = "The core implementation of tako"
authors = ["Ellie Pratt <ellie@skfl.tech>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["compiler", "programming", "language"]
include = ["src/**/*", "LICENSE.md", "README.md"]

[features]
default=["native"]
wasm=["wasm-logger", "uuid/rng-rand", "getrandom/wasm_js"]
native=["env_logger", "rocksdb"]
llvm=["inkwell", "codegen"]
codegen=[] # signals that 'a' codegen backend is active.
rocksdb=["qbice/rocksdb", "qbice/default-config"]

[lib]
name = "takolib"
path = "src/lib.rs"

# [[bin]]
# name = "make_test_case"
# path = "tests/bins/make_test_case.rs"

# [[bench]]
# name = "tako_bench"
# harness = false

[dependencies]
thiserror = "2.0.18"
bitvec = "1"
log.workspace = true
pretty_assertions.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }
async-trait.workspace = true
# Info: https://nnethercote.github.io/2021/12/08/a-brutally-effective-hash-function-in-rust.html
fxhash = "0.2"
static_assertions = "1.1"
num-traits = "0.2"
enum-kinds = "0.5"
lazy_static = "1.5.0"
env_logger = { version = "0.11.10", optional = true }
inkwell = { version = "0.9.0", features = ["llvm18-1"], optional = true }
wasm-logger = { version = "0.2.0", optional = true }
smallvec = { version = "1.15.1" }
llamada.workspace = true
better-std.workspace = true
test-each = "0.3.1"
#qbice = { version = "0.6.8", default-features = false }
qbice = { path="../../qbice/crates/qbice", default-features = false, features = ["smallvec", "bitvec"] }
tempfile = "3.27.0"
uuid = "1.23.1"
getrandom = "0.4.2"

[dev-dependencies]
strum = "0.28.0"
strum_macros = "0.28.0"
pretty_assertions.workspace = true
rand = "0.10.1"
walkdir = "2.5.0"
