[package]
name = "takoweb"
version = "0.1.0"
repository = "https://github.com/cypher1/tako"
description = "A web based UI for tako"
authors = ["Ellie Pratt <ellie@skfl.tech>"]
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version="0.23.0", features=["csr"] }
takolib = { path = "../takolib", features = [ "wasm" ], default-features = false }
tokio = { version = "1.52.1", features = ["sync", "macros"] }
yew-hooks = "0.6.4"
async-trait = "0.1"
web-sys = "0.3.95"
