[package]
name = "tree-sitter-tako"
description = "Tako grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tako"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-tako"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = { git = "https://github.com/tree-sitter/tree-sitter" }

[dev-dependencies]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter" }

[build-dependencies]
cc = "1.0.87"
